fixed arrows on slideshow; made controls div into flexbox so can have stronger alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -105,6 +105,7 @@ p, a, label, textarea, button, .label, figcaption {
   width: 100%;
   height: 100%;
   margin: 0;
+  
 }
 
 .carousel {
@@ -149,43 +150,56 @@ p, a, label, textarea, button, .label, figcaption {
   transform: translateX(-100%);
 }
 
-#left {
-  position: fixed;
-  display: flex;
-  top: 50%;
-  left: 0;
-}
-
-#right {
-  position: fixed;
-  display: flex;
-  top: 50%;
-  right: 0;
-}
 
 .arrow {
   color: white;
   transition: color 0.2s linear;
   cursor: pointer;
   user-select: none;
-  font-size: 100px;
+  font-size: 3em;
+  background-color:rgba(0, 0, 0, 0.5);
+  z-index: 1;
+}
+textarea {
+  max-width: 100%; 
+  max-height: 100%;
 }
 
 .arrow:hover {
-  color: black;
+  background-color: black;
+}
+/* either top 46% to match align items center or keep align items center in controls-which is better? */
+#left {
+  /* font-size: 20em; */
+  /* position: fixed;
+  display: flex;
+  top: 50%;
+  left: 0; */
 }
 
+#right {
+  /* font-size: 20em; */
+  /* position: fixed;
+  display: flex;
+  top: 50%;
+  right: 0; */
+}
+#controls {
+  /* position: fixed; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: center; 
+  /* margin: 0 20px 10px 0;
+  right: 0;
+  bottom: 0; */
+}
 #menu-button {
   display: none;
 }
 
-#controls {
-  position: fixed;
-  display: flex;
-  margin: 0 20px 10px 0;
-  right: 0;
-  bottom: 0;
-}
+
 
 figcaption {
   font-size: 0.9em;
@@ -212,6 +226,9 @@ footer {
   padding: 20px;
 }
 
+.options > li > a{
+  border-top: 1px solid white;
+}
 @media (max-width: 600px) {
   header {
     background-color: black;
@@ -254,7 +271,7 @@ footer {
   .navlinks {
     flex-direction: column;
   }
-  .navlink>a, .navlink>.label {
+  .navlink>a, .navlink>.label, .options > li > a{
     border-top: 1px solid white;
   }
   #menu-button:hover {
